# decentralized_multi_robot_exploration

./: README.md
cartographer/cartographer/io/: submap_painter.cc
cartographer/cartographer/io/internal/: mapping_state_serialization.cc
cartographer/cartographer/mapping/: pose_graph.h  pose_graph_interface.h
cartographer/cartographer/sensor/: landmark_data_test.cc
cartographer/cartographer/sensor/proto/: sensor.proto
cartographer_ros/cartographer_ros/cartographer_ros/: frontier_detection.cc  frontier_detection.h  map_builder_bridge.cc  map_builder_bridge.h  occupancy_grid_node_main.cc  offline_node.cc  sensor_bridge.cc
cartographer_ros/cartographer_ros/launch/: offline_node.launch
cartographer_ros/cartographer_rviz/cartographer_rviz/: drawable_submap.cc
frontier_exploration/: CMakeLists.txt  InstallationInstructions.md  README.md  package.xml
frontier_exploration/config/: decentralised_cartographer.lua  p3dx_base_local_planner_params.yaml  p3dx_costmap_common_params.yaml  p3dx_global_costmap_params.yaml  p3dx_local_costmap_params.yaml  pioneer-cartographer-grpc.lua  upload_pioneer3dx.xml
frontier_exploration/defs/: pioneer3at.xacro  pioneer3at_body.xacro  pioneer3dx-lms100.xacro  pioneer3dx.xacro  pioneer3dx_body.xacro
frontier_exploration/include/: functions.h
frontier_exploration/launch/: Burgard_assigner.launch  add_trajectory.launch  cartographer.launch  filter.launch  multi_robot_assigner.launch  multi_robot_navigation.launch  navigation.launch  robot_assigner.launch  stage-pioneer-3dx-sick.launch
frontier_exploration/msg/: FrontierTF.msg  InfoList.msg  RobotPosGoal.msg
frontier_exploration/scripts/: Burgard_assigner.py  decent_robot_assigner.py  frontier_filter.py  functions.py  hungarian.py
frontier_exploration/src/: functions.cpp
frontier_exploration/srv/: RobotService.srv
frontier_exploration/stage-worlds/: belgioioso_map.pgm  pioneer3dx-hokuyo.world  pioneer3dx-sick.world  pioneer3dx-sick_orig.world
navigation/costmap_2d/src/: observation_buffer.cpp
navigation/move_base/: CMakeLists.txt  package.xml
navigation/move_base/src/: move_base.cpp
navigation/navfn/src/: navfn_ros.cpp
stage_ros_private/: CMakeLists.txt  README.md  package.xml
stage_ros_private/src/: stageros.cpp
(+11 files in other folders)
